@@ -116,6 +116,12 @@
                                     <action selector="discard:" target="er7-2A-M57" id="yAT-hQ-gUp"/>
                                 </connections>
                             </menuItem>
+                            <menuItem title="Discard tracks" id="gan-sy-4Qi" userLabel="Discard tracks">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="discardTracks:" target="er7-2A-M57" id="G0f-Qj-mWr"/>
+                                </connections>
+                            </menuItem>
                             <menuItem isSeparatorItem="YES" id="aJh-i4-bef"/>
                             <menuItem title="Clear image list" keyEquivalent="k" id="aTl-1u-JFS">
                                 <connections>
@@ -244,20 +250,20 @@ CA
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <splitView autosaveName="GeoTagLeftRight" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pMq-xL-Jwc">
-                        <rect key="frame" x="20" y="20" width="1060" height="585"/>
+                        <rect key="frame" x="20" y="20" width="1060" height="537"/>
                         <subviews>
                             <customView misplaced="YES" id="Gwc-9o-vlc" userLabel="Left Pane">
-                                <rect key="frame" x="0.0" y="0.0" width="530" height="585"/>
+                                <rect key="frame" x="0.0" y="0.0" width="530" height="537"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <scrollView borderType="line" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ARi-Ei-bTG">
-                                        <rect key="frame" x="0.0" y="-24" width="517" height="585"/>
+                                        <rect key="frame" x="0.0" y="-24" width="517" height="537"/>
                                         <clipView key="contentView" id="gmY-qF-zsb">
-                                            <rect key="frame" x="1" y="1" width="515" height="583"/>
+                                            <rect key="frame" x="1" y="1" width="515" height="535"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" autosaveName="ImageTable" rowSizeStyle="automatic" headerView="acu-99-iMm" viewBased="YES" id="skl-pj-P9m">
-                                                    <rect key="frame" x="0.0" y="0.0" width="515" height="560"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="515" height="512"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <size key="intercellSpacing" width="3" height="2"/>
                                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -374,7 +380,7 @@ CA
                                                                 </tableCellView>
                                                             </prototypeCellViews>
                                                         </tableColumn>
-                                                        <tableColumn identifier="longitude" editable="NO" width="80" minWidth="10" maxWidth="3.4028234663852886e+38" id="0Bk-nM-nLV">
+                                                        <tableColumn identifier="longitude" editable="NO" width="51" minWidth="10" maxWidth="3.4028234663852886e+38" id="0Bk-nM-nLV">
                                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Longitude">
                                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                                                 <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -388,11 +394,11 @@ CA
                                                             <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                             <prototypeCellViews>
                                                                 <tableCellView identifier="longitude" id="4Km-RM-P0Q">
-                                                                    <rect key="frame" x="429" y="1" width="84" height="17"/>
+                                                                    <rect key="frame" x="429" y="1" width="55" height="17"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <subviews>
                                                                         <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="fNU-Jf-yeQ">
-                                                                            <rect key="frame" x="0.0" y="1" width="72" height="16"/>
+                                                                            <rect key="frame" x="0.0" y="1" width="43" height="16"/>
                                                                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="-122.123456" id="e4b-z8-Hnu">
                                                                                 <font key="font" metaFont="system"/>
                                                                                 <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -445,22 +451,22 @@ CA
                                 </constraints>
                             </customView>
                             <customView misplaced="YES" id="v4A-KZ-PzD" userLabel="Right Pane">
-                                <rect key="frame" x="539" y="0.0" width="521" height="585"/>
+                                <rect key="frame" x="539" y="0.0" width="521" height="537"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <splitView autosaveName="GeoTagUpDown" translatesAutoresizingMaskIntoConstraints="NO" id="Owq-8L-C5q">
-                                        <rect key="frame" x="0.0" y="-24" width="526" height="585"/>
+                                        <rect key="frame" x="0.0" y="-24" width="526" height="537"/>
                                         <subviews>
                                             <customView misplaced="YES" id="VLF-DZ-LKW" userLabel="Image pane">
-                                                <rect key="frame" x="0.0" y="0.0" width="526" height="259"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="526" height="237"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <imageView translatesAutoresizingMaskIntoConstraints="NO" id="xuH-yg-55o">
-                                                        <rect key="frame" x="-3" y="-14" width="532" height="265"/>
+                                                        <rect key="frame" x="-3" y="-14" width="532" height="243"/>
                                                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" imageFrameStyle="grayBezel" id="giZ-5r-50G"/>
                                                     </imageView>
                                                     <progressIndicator maxValue="100" displayedWhenStopped="NO" indeterminate="YES" style="bar" translatesAutoresizingMaskIntoConstraints="NO" id="Leb-gI-5bq">
-                                                        <rect key="frame" x="167" y="109" width="193" height="20"/>
+                                                        <rect key="frame" x="167" y="98" width="193" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="193" id="BMR-vd-JD0"/>
                                                         </constraints>
@@ -476,11 +482,11 @@ CA
                                                 </constraints>
                                             </customView>
                                             <customView misplaced="YES" id="mR8-Yl-B58" userLabel="Map pane">
-                                                <rect key="frame" x="0.0" y="268" width="526" height="317"/>
+                                                <rect key="frame" x="0.0" y="246" width="526" height="291"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="jOB-Xu-ExJ">
-                                                        <rect key="frame" x="375" y="265" width="138" height="32"/>
+                                                        <rect key="frame" x="375" y="239" width="138" height="32"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="SvS-X7-UYa"/>
                                                         </constraints>
@@ -493,7 +499,7 @@ CA
                                                         </connections>
                                                     </button>
                                                     <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="UAa-bh-Wko">
-                                                        <rect key="frame" x="18" y="269" width="286" height="24"/>
+                                                        <rect key="frame" x="18" y="243" width="286" height="24"/>
                                                         <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="248-FW-Avl">
                                                             <font key="font" metaFont="system"/>
                                                             <segments>
@@ -507,13 +513,13 @@ CA
                                                         </connections>
                                                     </segmentedControl>
                                                     <mapView mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Zwv-MK-4Du" customClass="MapView" customModule="GeoTag" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="-13" width="526" height="276"/>
+                                                        <rect key="frame" x="0.0" y="-13" width="526" height="250"/>
                                                         <connections>
                                                             <outlet property="delegate" destination="Go6-yP-GH9" id="xhZ-dn-nDA"/>
                                                         </connections>
                                                     </mapView>
                                                     <searchField wantsLayer="YES" verticalHuggingPriority="750" fixedFrame="YES" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cBm-xR-XMN">
-                                                        <rect key="frame" x="182" y="242" width="323" height="22"/>
+                                                        <rect key="frame" x="182" y="216" width="323" height="22"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES"/>
                                                         <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" usesSingleLineMode="YES" bezelStyle="round" sendsWholeSearchString="YES" maximumRecents="10" recentsAutosaveName="Searches" id="KmR-EN-cxb">
                                                             <font key="font" metaFont="system"/>
@@ -569,7 +575,7 @@ CA
                 <outlet property="delegate" destination="Voe-Tx-rLC" id="YQK-Qt-HzN"/>
                 <outlet property="initialFirstResponder" destination="ARi-Ei-bTG" id="Jxz-i1-P4S"/>
             </connections>
-            <point key="canvasLocation" x="-1004" y="95"/>
+            <point key="canvasLocation" x="-914" y="55"/>
         </window>
         <menu title="TableMenu" identifier="tableMenu" id="RI2-ul-n9D">
             <items>
