@@ -26,6 +26,8 @@ GeoTag is available from several sources
 * Add preference item to preserve the original image file
   modification time when updating GeoLocation data.
 
+* Add "Discard tracks" under the File menu. All tracks are cleared from the map.
+
 * Update to exiftool 12.12
 
 ## GeoTag 4.9
