@@ -1,7 +1,5 @@
 Feature Requests:
 
-* removed loaded gps tracks
-
 * Paste into Change Image Location Window
 
 * Add and option to show the location of all selected images.
